tests/sources/invalid/control_flow/loop_header_errors.fire
// Malformed loop and if headers.

// Invalid if condition, then close paren
if (1 +) {  //~ ERROR FS-PARSE-0012 @8
    a: int32 = 1;
}

// Missing ')' after if condition
if (true {  //~ ERROR FS-PARSE-0010 @10
    b: int32 = 1;
}

// Missing '(' after while
while true {  //~ ERROR FS-PARSE-0010 @7
    c: int32 = 1;
}

// Missing ')' after while condition
while (true {  //~ ERROR FS-PARSE-0010 @13
    d: int32 = 1;
}

// Missing '(' after for
for ;;) {  //~ ERROR FS-PARSE-0010 @5
    e: int32 = 1;
}

// Missing ';' after for init
for (f: int32 = 0) {  //~ ERROR FS-PARSE-0010 @18
    g: int32 = 1;
}

// Missing ')' after for header
for (h: int32 = 0; h < 3; h++ {  //~ ERROR FS-PARSE-0010 @31
    i2: int32 = 1;
}

// for-in: missing 'in' cannot be formed (lookahead requires it), but a bad
// collection expression after 'in' can:
for (v: int32 in ) {  //~ ERROR FS-PARSE-0012 @18
//~^ ERROR FS-PARSE-0010 @20
    j2: int32 = 1;
}

// for-in: missing ')' after the header
arr: int32[] = [1, 2];
for (w: int32 in arr {  //~ ERROR FS-PARSE-0010 @22
    k2: int32 = 1;
}
